2022-08-27

  * Significantly reduce multipliers, remove champions and siege from
  upgrade
  * release 0.26.1

2022-08-26

  * release 0.26.0