@@ -1,6 +1,6 @@
 {
 	"name": "kush-extreme",
-	"version": "0.26.1",
+	"version": "0.26.1999",
 	"label": "kush-extreme",
 	"description": "Makes the Kushites very OP",
 	"dependencies": [
