@@ -11,9 +11,9 @@
 		{ "value": "Attack/Melee/Damage/Crush", "multiply": 1.2 },
 		{ "value": "Attack/Ranged/Damage/Hack", "multiply": 1.2 },
 		{ "value": "Attack/Ranged/Damage/Pierce", "multiply": 1.2 },
-		{ "value": "Resistance/Entity/Damage/Hack", "multiply": 1.1 },
-		{ "value": "Resistance/Entity/Damage/Pierce", "multiply": 1.1 },
-		{ "value": "Health/Max", "multiply": 1.2 }
+		{ "value": "Resistance/Entity/Damage/Hack", "multiply": 2.0 },
+		{ "value": "Resistance/Entity/Damage/Pierce", "multiply": 2.0 },
+		{ "value": "Health/Max", "multiply": 1.7 }
 	],
 	"affects": ["FemaleCitizen", "Soldier !Siege !Champion"]
 }
