@@ -1,3 +1,7 @@
+2022-08-31
+
+  * Increase resistance and hp
+
 2022-08-27
 
   * Significantly reduce multipliers, remove champions and siege from
